// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should withErrorMessage wrapped component renders correctly with error 1`] = `
<Fragment>
  <ErrorMessage
    message="Error"
    onClose={[Function]}
  />
  <MockComponent
    showErrorMessage={[Function]}
  />
</Fragment>
`;

exports[`Should withErrorMessage wrapped component renders correctly without error 1`] = `
<Fragment>
  <MockComponent
    showErrorMessage={[Function]}
  />
</Fragment>
`;
